[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
sqlite-test = { path = ".." }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
